# next-ai-draw-io

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  Dockerfile.ws  LICENSE  README.md  ROADMAP.md  docker-compose.yml  env.example  next.config.js  package-lock.json  package.json  simple-test.py  test-websocket.py  vitest.config.ts
.github/workflows/: docker-build.yml
app/: layout.tsx  page.tsx
app/about/: page.tsx
components/: chat-example-panel.tsx  chat-input.tsx  chat-message-display.tsx  chat-panel.tsx  checkpoint-controls.tsx  file-preview-list.tsx  history-dialog.tsx  quota-limit-toast.tsx  reset-warning-modal.tsx  save-dialog.tsx  settings-dialog.tsx
contexts/: diagram-context.tsx
docs/: DDD_ARCHITECTURE.md  DIFF_COMMUNICATION_DESIGN.md  INCREMENTAL_EDITING_RFC.md  README_CN.md  README_JA.md  ai-providers.md
hooks/: index.ts  useCheckpoint.ts
lib/: ai-providers.ts  cached-responses.ts  diagram-diff-tracker.ts  diagram-operations-handler.ts  system-prompts.ts  use-mcp-polling.ts  utils.ts
lib/application/: README.md  index.ts
lib/domain/: README.md  index.ts
lib/infrastructure/: README.md  index.ts
mcp-server/: Dockerfile  README.md  pyproject.toml
mcp-server/src/drawio_mcp_server/: __init__.py  __main__.py  config.py  diagram_generator.py  drawing_guidelines.py  server.py  templates.py  validator.py  web_client.py
mcp-server/src/drawio_mcp_server/tools/: __init__.py  diagram_tools.py  diff_tools.py  guideline_tools.py  tab_tools.py  template_tools.py  web_tools.py
scripts/: start-dev.sh  ws-server.ts
tests/: setup.ts
(+34 files in other folders)
