[project]
name = "drawio-mcp-server"
version = "1.0.0"
description = "MCP Server for creating and editing Draw.io diagrams via GitHub Copilot"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "u9401066"}
]
keywords = ["mcp", "draw.io", "diagram", "github-copilot", "fastmcp"]

dependencies = [
    "fastmcp>=0.4.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
drawio-mcp-server = "drawio_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/drawio_mcp_server"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
